--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,6 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
